Added Tooltip, and other UI improvements

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="TippyTippy Avatar is a playful digital space where toddlers can customize and create their very own avatar using intuitive mouse-based controls."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
